styles.css
*, *::before, *::after {
  box-sizing: border-box;
  user-select: none;
  -webkit-user-select: none;
}

body {
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  position: relative;
}

.world {
  overflow: hidden;
  position: relative;
}

.score {
  position: absolute;
  font-size: 3vmin;
  right: 1vmin;
  top: 1vmin;
}

.controls {
  position: absolute;
  bottom: 5vh;
  font-size: 20px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  padding: 0 10vw;
}
.btn {
  background-color: rgba(0, 0, 0, .2);
  padding: 15px 20px;
  user-select: none;
}

.end-screen,
.start-screen {
  position: absolute;
  z-index: 1;
  background-color: rgba(255, 204, 137, 0.7);
  padding: 10px 20px;
  font-size: 5vmin;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.hide {
  display: none;
}

.ground {
  --left: 0;
  position: absolute;
  /* this width value is being referred to in ground.js */
  width: 300%;
  bottom: 0;
  left: calc(var(--left) * 1%);
}

.dino {
  --bottom: 0;
  position: absolute;
  left: 1%;
  height: 30%;
  bottom: calc(var(--bottom) * 1%);
}

.cactus {
  position: absolute;
  left: calc(var(--left) * 1%);
  height: 30%;
  bottom: 0;
}

.ptero {
  position: absolute;
  left: calc(var(--left) * 1%);
  height: 30%;
  bottom: 20%;
}

